--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">150,255</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">110,867</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">palywright.Practice1</td><td><a href="#m0">OpenCloseBrowser</a></td><td rowspan="1">1746006033567</td><td rowspan="1">51063</td></tr><tr class="passedodd"><td rowspan="1">palywright.Practice2</td><td><a href="#m1">locatorPractice</a></td><td rowspan="1">1746006084676</td><td rowspan="1">23874</td></tr><tr class="passedeven"><td rowspan="1">palywright.Practice3</td><td><a href="#m2">mouseoperations</a></td><td rowspan="1">1746006108559</td><td rowspan="1">30316</td></tr><tr class="passedodd"><td rowspan="1">palywright.Practice4</td><td><a href="#m3">handlingdropdown</a></td><td rowspan="1">1746006138886</td><td rowspan="1">44787</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">palywright.Practice6</td><td><a href="#m0">screenshotPractice</a></td><td rowspan="1">1746621362935</td><td rowspan="1">110801</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">palywright.Practice1#OpenCloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">palywright.Practice2#locatorPractice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">palywright.Practice3#mouseoperations</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">palywright.Practice4#handlingdropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">palywright.Practice6#screenshotPractice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
